@@ -1,5 +1,8 @@
 2019-02-05  Jakub Jelinek  <jakub@redhat.com>
 
+	PR target/89188
+	* g++.dg/opt/pr89188.C: New test.
+
 	PR rtl-optimization/89195
 	* gcc.c-torture/execute/pr89195.c: New test.
 
